English translations && fixed issue
Fixed issue: executing a query made the (database && table) container invisible

--- a/css/interface.css
+++ b/css/interface.css
@@ -18,6 +18,7 @@
     border: 1px solid lightgray;
     flex-grow: 1;
     max-width: 200px;
+    min-width: 200px;
     user-select: none;
     overflow-y: auto;
     overflow-x: hidden;
@@ -39,6 +40,7 @@
 
 .dbinterface__db_selector > #databases-list {
     padding: 0; margin: 0;
+    height: 100%;
 }
 
 .dbinterface__db_selector > #databases-list li {
@@ -277,6 +279,7 @@ table.grid > thead > tr > th:has(i) {
 #info-list {
     padding: 5px 10px;
     list-style: none;
+    height: 100%;
 }
 
 #info-list ul {
